--- a/50_Problems/First_50_Problems.csproj
+++ b/50_Problems/First_50_Problems.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A1DEF85D-E7ED-4B50-972F-6C7075D161C5}</ProjectGuid>
+    <ProjectGuid>{688EE156-78F8-4E96-8ECA-E34BAA0E1930}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Problem_1</RootNamespace>
-    <AssemblyName>Problem_1</AssemblyName>
+    <RootNamespace>_50_Problems</RootNamespace>
+    <AssemblyName>50_Problems</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Problem1.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
