--- a/50_Problems/First_50_Problems.csproj
+++ b/50_Problems/First_50_Problems.csproj
@@ -44,6 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Problem1.cs" />
+    <Compile Include="Problem2.cs" />
+    <Compile Include="Problem3.cs" />
+    <Compile Include="Problem4.cs" />
+    <Compile Include="Problem5.cs" />
+    <Compile Include="Problem6.cs" />
+    <Compile Include="Problem7.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
